--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemlist_cv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,39 +12,11 @@
     tools:context=".MenuActivity"
     >
 
-    <Button
-        android:id="@+id/jadwal_sholat"
-        android:text="Jadwal Sholat GMT +7"
-        android:textAllCaps="false"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_menu_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/jadwal_shola"
-        android:text="Jadwal Sholat GMT +8"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/jadwal_shol"
-        android:text="Jadwal Sholat GMT +9"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/jadwal_sho"
-        android:text="Jadwal Sholat GMT +10"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/jadwal"
-        android:text="Jadwal Sholat GMT +11"
-        android:textAllCaps="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/itemlist"
+></androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
